css phone layout try

--- a/index.html
+++ b/index.html
@@ -72,6 +72,13 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
+      @media (min-width: 1440px) {
+        #app {
+        width: 50%;
+        height: 50%;
+        position: relative;
+      }
+      }
     </style>
     <div id="app">
       <div>
