--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-      @media (min-width: 1440px) {
-        #app {
+      @media (max-width: 1440px) {
+        #game {
         width: 50%;
         height: 50%;
         position: relative;
