--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-      @media (max-width: 1440px) {
+      @media (max-height: 720px) {
         #game {
         width: 20%;
         height: 20%;
