--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-      @media (max-height: 720px) {
+      @media (max-width: 1440px) {
         #game {
-        width: 20%;
-        height: 20%;
+        width: 10%;
+        height: 10%;
         position: relative;
       }
       }
