--- a/index.html
+++ b/index.html
@@ -72,12 +72,7 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-      @media (max-width: 1440px) {
-        #game {
-        width: 10%;
-        height: 10%;
-        position: relative;
-      }
+      @media (min-width: 1440px) {
       }
     </style>
     <div id="app">
