--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-      
+      canvas {  /* or some other selector */
+        width: 500px;
+        height: 400px;
+      }
     </style>
     <div id="app">
       <div>
