--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
     <div id="app">
       <div>
         <p class="note">Tap/Click around to move</p>
-        <p> Manuel Porter Leiva</p>
-        <p> Presentation Game</p>
-        <p> Go to the information point to start</p>
+        <p class="note"> Manuel Porter Leiva</p>
+        <p class="note"> Presentation Game</p>
+        <p class="note"> Go to the information point to start</p>
 
         <div id="textbox-container" style="display: none">
           <div id="textbox">
