--- a/index.html
+++ b/index.html
@@ -67,7 +67,25 @@
       .note {
         position: absolute;
         left: 5%;
-        top: 1vh;
+        top: 25vh;
+        display: flex;
+        flex-direction: column;
+        color: rgb(238, 238, 238);
+      }
+
+      .instructions {
+        position: absolute;
+        left: 5%;
+        top: 35vh;
+        display: flex;
+        flex-direction: column;
+        color: rgb(238, 238, 238);
+      }
+
+      .author {
+        position: absolute;
+        left: 5%;
+        top: 40vh;
         display: flex;
         flex-direction: column;
         color: rgb(238, 238, 238);
@@ -77,10 +95,8 @@
     <div id="app">
       <div>
         <p class="note">Tap/Click around to move</p>
-        <p class="note"> Manuel Porter Leiva</p>
-        <p class="note"> Presentation Game</p>
-        <p class="note"> Go to the information point to start</p>
-
+        <p class="instructions"> Go to the information point to start</p>
+        <p class="author"> Manuel Porter Leiva - Presentation Game </p>
         <div id="textbox-container" style="display: none">
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
