--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div>
         <p class="note">Tap/Click around to move</p>
         <p class="instructions"> Go to the information point to start</p>
-        <p class="author"> Manuel Porter Leiva - Presentation Game </p>
+        <p class="author"> Manuel Portero Leiva - Presentation Game </p>
         <div id="textbox-container" style="display: none">
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
