--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <div id="app">
       <div>
         <p class="note">Tap/Click around to move</p>
-        <p class="instructions"> Go to the information point to start</p>
-        <p class="author"> Manuel Portero Leiva - Presentation Game </p>
+        <p class="instructions"> Information point to start</p>
+        <p class="author"> Author: Manuel Portero Leiva </p>
         <div id="textbox-container" style="display: none">
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
