--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="public/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=0.92" />
-    <title>MPL Presentation Game </title>
+    <title>Manuel PL Presentation</title>
     
   </head>
   <body>
@@ -72,31 +72,11 @@
         flex-direction: column;
         color: rgb(238, 238, 238);
       }
-
-      .instructions {
-        position: absolute;
-        left: 5%;
-        top: 10vh;
-        display: flex;
-        flex-direction: column;
-        color: rgb(238, 238, 238);
-      }
-
-      .author {
-        position: absolute;
-        left: 5%;
-        top: 15vh;
-        display: flex;
-        flex-direction: column;
-        color: rgb(238, 238, 238);
-      }
       
     </style>
     <div id="app">
       <div>
-        <p class="note">Tap/Click around to move</p>
-        <p class="instructions"> Information point to start</p>
-        <p class="author"> Author: Manuel Portero Leiva </p>
+        <p class="note">Click for moving. Info point to start</p>
         <div id="textbox-container" style="display: none">
           <div id="textbox">
             <p id="dialogue" class="ui-text"></p>
